--- a/app/src/main/res/layout/parent_rv_layout.xml
+++ b/app/src/main/res/layout/parent_rv_layout.xml
@@ -6,37 +6,53 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/border"
-    android:layout_margin="20dp"
-    android:gravity="center">
+    android:layout_margin="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10dp"
-        android:background="@drawable/border">
+        android:weightSum="2"
+        android:background="@drawable/border2">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
         <TextView
             android:id="@+id/titleName"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Title"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="16sp"
             android:textColor="@color/gray"/>
 
-        <ImageView
-            android:id="@+id/pick"
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:src="@drawable/image_photo"
             android:layout_weight="1"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"
-            android:layout_gravity="center"/>
+            android:layout_margin="1.5dp"
+            android:background="@drawable/one_side_border">
+
+            <ImageView
+                android:id="@+id/pick"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:src="@drawable/image_photo"
+                android:layout_weight="1"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
