1. Showing images in wrong position problem solved.

--- a/app/src/main/res/layout/child_rv_layout.xml
+++ b/app/src/main/res/layout/child_rv_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="fitCenter"
+        android:padding="5dp"
         android:layout_margin="5dp"
         android:src="@drawable/image_photo"/>
 
