--- a/app/src/main/res/layout/parent_rv_layout.xml
+++ b/app/src/main/res/layout/parent_rv_layout.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/border"
-    android:layout_margin="10dp"
-    android:padding="10dp">
+    android:layout_margin="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,7 +70,6 @@
         android:layout_height="match_parent"
         android:scrollbarStyle="outsideInset"
         android:scrollbars="vertical"
-        android:layout_margin="10dp"
-        tools:listitem="@layout/child_rv_layout"/>
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
